# zee-oracle-fetcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  coinmarketcap.json  docker-compose.yaml  example.env
cronjobs/: fetcher_cronjob  zee_fetcher_cronjob
example/: coinmarketcap.json
scripts/: fetcher.sh  fetcher_script.sh  zee_fetcher_script.sh
src/: main.rs
src/coinmarketcap/: coinmarketcap.rs  mod.rs  model.rs
