[package]
name = "fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
clap = { version = "3.1.8", features = ["derive"] }
anyhow = "1.0.32"
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = {version = "0.15.0"}
log = "0.4"
pretty_env_logger = "0.4"
#tokio_schedule = "0.3.0"
#chrono = "0.4.22"